<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/city_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_place_holder"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_date_place_holder" />

    <TextView
        android:id="@+id/shidu_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/shi_du_place_holder" />

    <TextView
        android:id="@+id/pm25_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aqi_place_holder" />

    <TextView
        android:id="@+id/pm10_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pm10_place_holder" />

    <TextView
        android:id="@+id/quality_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quality_place_holder" />

    <TextView
        android:id="@+id/wen_du_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wen_du_place_holder" />

    <TextView
        android:id="@+id/gan_mao_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notice_place_holder" />

</LinearLayout>