<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="06日星期日" />

    <TextView
        android:id="@+id/sunrise_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sunrise_place_holder" />

    <TextView
        android:id="@+id/high_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="高温 28.0℃" />

    <TextView
        android:id="@+id/low_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="低温 14.0℃" />

    <TextView
        android:id="@+id/sunset_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunset_place_holder" />

    <TextView
        android:id="@+id/aqi_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aqi_place_holder" />

    <TextView
        android:id="@+id/fx_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fx_place_holder" />

    <TextView
        android:id="@+id/fl_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fl_place_holder" />

    <TextView
        android:id="@+id/type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_place_holder" />

    <TextView
        android:id="@+id/notice_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notice_place_holder" />
</LinearLayout>